--- a/shard.yml
+++ b/shard.yml
@@ -8,6 +8,10 @@ targets:
   romanweb:
     main: src/romanweb.cr
 
+dependencies:
+  kemal:
+    github: kemalcr/kemal
+
 crystal: 0.25.1
 
 license: MIT
