--- a/shard.yml
+++ b/shard.yml
@@ -9,10 +9,18 @@ targets:
     main: src/romanweb.cr
 
 dependencies:
-  spec-kemal:
-    github: kemalcr/spec-kemal
+  
   kemal:
     github: kemalcr/kemal
+
+development_dependencies:
+  spec-kemal:
+    github: kemalcr/spec-kemal
+  coverage:
+    github: anykeyh/crystal-coverage
+  ameba:
+    github: veelenga/ameba
+
 
 crystal: 0.25.1
 
